# Midas

./: .dockerfile  .gitignore  README.md  docker-compose.yml  fly.toml  pyproject.toml  repomix-output.xml  sample_leads.csv
backend/: .env  .env.example  .gitignore  Dockerfile  cloudbuild.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt  start-backend.sh
backend/app/: main.py
backend/app/agents/: email_agents.py  llm_router.py  model_router.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: entities.py
backend/app/schemas/: dto.py  types.py
backend/app/services/: analytics.py  analytics_service.py  campaign.py  importer.py  lead_service.py  outreach_service.py  template_service.py
backend/app/utils/: serializers.py
backend/app/workers/: scheduler.py
backend/prisma/: dev.db  migrateMailboxes.ts  rls.sql  schema.prisma  seedCollaboration.ts  seedDefaultMailboxes.ts
backend/scripts/: cleanseCampaignLeads.ts  cleanseQueue.ts  syncLeadStatus.ts
backend/src/: app.ts  index.ts
backend/src/config/: env.ts  logger.ts
backend/src/controllers/: ai.controller.ts  auth.controller.ts  campaign.controller.ts  imap.controller.ts  invite.controller.ts  lead.controller.ts  mailbox.controller.ts  user.controller.ts  userSettings.controller.ts
backend/src/lib/: encryption.ts  prisma.ts
backend/templates/: opt_out.html
backend/tests/: test_campaign_sentiment.py  test_importer.py  test_lead_flow.py  test_llm_router.py  test_main_paths.py  test_outreach_followup.py
(+123 files in other folders)
